--- a/css/style.css
+++ b/css/style.css
@@ -22,9 +22,10 @@ body{
     text-align: center;
 }
 
-section h2{
+section > h2{
     font-size: 48px;
     text-align: center;
     margin-bottom: 30px;
     color: white;
+    margin-top: 10px;
 }
